# subskell

./: .gitignore  .ocamlinit  README.md  dune-project
examples/: eqpoly.sml  fibonacci.sml  powersof2.sml  scope.sml  typescheme.sml  typeschemewithout.sml
lib/: ast.ml  base26p.ml  dune  help.ml  lexer.mll  main.ml  parser.mly  parsingast.ml  prettyprint.ml  runtime.ml  runtimeast.ml  typecheck.ml  typescommon.ml  typesruntime.ml  typesstatic.ml
tests/: dune  main.ml
